--- a/BlazorLifeCycle/wwwroot/index.html
+++ b/BlazorLifeCycle/wwwroot/index.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
     <title>BlazorLifeCycle</title>
     <base href="/" />
+    <script src="js/blazorLifeCycle.js"></script>
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/loader.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>Loading...</app>
+    <app></app>
 
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
