--- a/BlazorPersist/wwwroot/index.html
+++ b/BlazorPersist/wwwroot/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <title>BlazorLifeCycle</title>
+    <title>BlazorPersist</title>
     <base href="/" />
-    <script src="js/blazorLifeCycle.js"></script>
+    <script src="js/blazorPersist.js"></script>
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/loader.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
