Added second text input and autofocus

--- a/BlazorPersist/wwwroot/index.html
+++ b/BlazorPersist/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/loader.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="css/Inputs.css" rel="stylesheet" />
 </head>
 <body>
     <app></app>
